<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:checked="true"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_this_app"/>

        <item
            android:id="@+id/nav_more_free_apps"
            android:icon="@drawable/ic_more_free_apps"
            android:title="@string/more_free"/>
        <item
            android:id="@+id/nav_about_this_app"
            android:icon="@drawable/ic_about_this_app"
            android:title="@string/about_this_app"/>
        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/ic_quit"
            android:title="@string/quit"/>
    </group>

</menu>